# iot_full_stack

./: .gitignore  LICENSE  README.md  docker-compose.yml  iot_full_stack.code-workspace  requirements.txt  requirements_base.txt
.west/: config
backend/: Dockerfile  requirements.txt
backend/backend/: settings.py
backend/device/: admin.py  models.py
backend/temperature_logger/: admin.py  models.py
backend_db/: requirements.txt
backend_db/backend/: settings.py  urls.py
backend_db/device/: serializers.py  urls.py  views.py
backend_hub/: Dockerfile  requirements.txt
backend_hub/src/: database.py  (+2 more)
device/: CMakeLists.txt  pm_static_nrf52840dk_nrf52840.yml  prj.conf  west.yml
device/boards/: native_posix.conf  nrf52840dk_nrf52840.conf
device/src/: board_utils.h  commands.c  commands.h  main.c  utils.c  utils.h
device/src/communication/: CMakeLists.txt  communication_hub.c  communication_hub.h
device/src/communication/zigbee/: CMakeLists.txt  zb_helper.h  zb_temperature_sensor.h  zigbee.c  zigbee.h  zigbee_commissioning.c  zigbee_commissioning.h
device/src/sensors/: CMakeLists.txt  sensors_hub.c  sensors_hub.h  sensors_utils.h
device/src/sensors/battery_level/: CMakeLists.txt  battery_level.c  battery_level.h  battery_level_fake.c  battery_level_private.h  battery_level_shell.c
device/src/ui/: CMakeLists.txt  buttons.c  buttons.h  leds.c  leds.h
device/sysbuild/: mcuboot.conf
device/temp_sensor/src/: main.c
frontend/: Dockerfile
scripts/: catch_all_mqtt_traffic.py  test_backend_device.py  test_backend_rest_api.py  test_mqtt_broker.py
(+10 files in other folders)
